--- a/app/css/app.css
+++ b/app/css/app.css
@@ -84,7 +84,7 @@ MESSAGES
   background-color: #eee;
   border-radius: 1em/1em;
   display: inline-block;
-  margin: .25em 0;
+  margin: .25em 0 .25em 20px;
   position: relative;
   padding: 1em;
 }
@@ -105,18 +105,41 @@ MESSAGES
 }
 
 /* line 100, ../scss/_messages.scss */
+.avatar {
+  transform: translateY(50%);
+  display: inline-block;
+  text-align: center;
+}
+/* line 104, ../scss/_messages.scss */
+.avatar img {
+  height: 80px;
+  width: 80px;
+  display: block;
+}
+/* line 110, ../scss/_messages.scss */
+.avatar i {
+  display: block;
+  font-style: normal;
+}
+
+/* line 115, ../scss/_messages.scss */
+.message.self .avatar {
+  margin-right: 12px;
+}
+
+/* line 119, ../scss/_messages.scss */
 .message:not(.self) {
   margin-left: 12px;
 }
 
-/* line 104, ../scss/_messages.scss */
+/* line 123, ../scss/_messages.scss */
 .message.self span {
   background-color: #1f96fb;
   color: #fff;
   margin-right: 12px;
 }
 
-/* line 110, ../scss/_messages.scss */
+/* line 129, ../scss/_messages.scss */
 .message.self span::after {
   display: block;
   content: ' ';
@@ -131,7 +154,7 @@ MESSAGES
   border-left: 12px solid #1f96fb;
 }
 
-/* line 126, ../scss/_messages.scss */
+/* line 145, ../scss/_messages.scss */
 #inputPane {
   padding: .5em 12px;
   background-color: #fff !important;
@@ -144,19 +167,19 @@ MESSAGES
   z-index: 1000;
 }
 
-/* line 138, ../scss/_messages.scss */
+/* line 157, ../scss/_messages.scss */
 .indicator span::before,
 .indicator span::after {
   display: none !important;
 }
 
-/* line 143, ../scss/_messages.scss */
+/* line 162, ../scss/_messages.scss */
 .indicator {
   text-align: right;
   margin-right: 12px;
 }
 
-/* line 148, ../scss/_messages.scss */
+/* line 167, ../scss/_messages.scss */
 input {
   font-size: 1em;
   border-radius: 5px;
@@ -164,13 +187,13 @@ input {
   border: 1px solid #ccc;
 }
 
-/* line 155, ../scss/_messages.scss */
+/* line 174, ../scss/_messages.scss */
 input[type="text"] {
   padding: .5em;
   width: 100%;
 }
 
-/* line 160, ../scss/_messages.scss */
+/* line 179, ../scss/_messages.scss */
 input[type="submit"] {
   background-color: #1f96fb;
   color: #fff;
@@ -182,18 +205,18 @@ input[type="submit"] {
   border-radius: 100px;
 }
 
-/* line 171, ../scss/_messages.scss */
+/* line 190, ../scss/_messages.scss */
 input:focus {
   outline: none;
   box-shadow: none;
 }
 
-/* line 176, ../scss/_messages.scss */
+/* line 195, ../scss/_messages.scss */
 [hidden] {
   display: none !important;
 }
 
-/* line 180, ../scss/_messages.scss */
+/* line 199, ../scss/_messages.scss */
 input[disabled] {
   border-color: #eee;
   color: #eee;
