--- a/app/scss/_messages.scss
+++ b/app/scss/_messages.scss
@@ -76,7 +76,7 @@ $msg-color: #1f96fb;
   background-color: #eee;
   border-radius: 1em/1em;
   display: inline-block;
-  margin: .25em 0;
+  margin: .25em 0 .25em 20px;
   position: relative;
   padding: 1em;
 }
@@ -95,6 +95,25 @@ $msg-color: #1f96fb;
   border-bottom: 8px solid transparent;
   
   border-right: 12px solid #eee;
+}
+
+.avatar {
+  transform: translateY(50%);
+  display: inline-block;
+  text-align: center;
+  img {
+    height: 80px;
+    width: 80px;
+    display: block;
+  }
+
+  i {
+    display: block;
+    font-style: normal;
+  }
+}
+.message.self .avatar {
+  margin-right: 12px;
 }
 
 .message:not(.self) {
